GenericSetup Product Changelog
==============================

GenericSetup 1.5.0 (unreleased)
-------------------------------

- Added support for import / export of subscribers from component registry.

- Adapter removal.

- Fix utility removal so utility is not added when it is missing from the
  local component registry.

- Fixed component handler to use 'for' not 'for_' in adapter directive. To
  support import of existing profiles 'for_' is used as a fallback.

- Changed testing.py to directly load zope.traversing's ZCML instead of going
  via the Five traversing.zcml BBB shim.

- Added new feature to the component handler. For factory based utilities you
  can now specify an additional id. All factory based utilities will now by
  default be added to the site manager (being an ObjectManager itself) as an
  object and this persistent object is registered as the utility. On removal
  both the registration and the object are removed. The new id argument is
  used to specify the id of the object as set via `__name__`. This change
  makes these utilities introspectable in the ZMI and clearly separates the
  persistent object and utility registration aspect.

- Adjusted TarballImportContext to work with Python 2.6's tarfile module.

- Cleaned up / normalized imports:

  o Don't import from Globals;  instead, use real locations.

  o Make other imports use the actual source module, rather than an
    intermediate (e.g., prefer importing 'ClassSecurityInfo' from
    'AccessControl.SecurityInfo' rather than from 'AccessControl').

  o Avoid relative imports, which will break in later versions of Python.

- events: Added 'handleProfileImportedEvent' subscriber.
  After a full import it updates 'last version for profile'.

- UpgradeSteps: Improved listUpgradeSteps behavior.
  If versions and checker are specified for a step, the checker is used as an
  additional restriction.

- Don't fail when a sub-item cannot be adapted after creation when